# chaturbate-recorder-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Containerfile  README.md  config.example.toml  podman-compose.yml  recordings
scripts/: fix-cookie.sh
src/: error.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs
src/cli/: args.rs
src/config/: loader.rs  mod.rs  validation.rs
src/fs/: mod.rs  paths.rs
src/output/: console.rs  mod.rs  progress.rs  stats.rs
src/stream/: discovery.rs  mod.rs  monitor.rs  recorder.rs  segment.rs
