[package]
name = "chaturbate-recorder"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for recording live video streams from Chaturbate"
authors = ["Bert"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", features = ["stream", "gzip", "deflate"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
console = "0.15"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
m3u8-rs = "6"
url = "2"
regex = "1"
futures = "0.3"

[[bin]]
name = "chaturbate-recorder"
path = "src/main.rs"
